Blender crashes on many modeling operations (loopcut, extrude, duplication, ...) on mesh with normal map node connected to material #78361

Closed
opened 2020-06-27 16:54:35 +02:00 by Vyacheslav Kobozev · 12 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-26 17:24, hash: b7b57e7155
Worked: 2.83.1

Short description of error
Loopcut crashes Blender.
Without material everything fine.
With empty normalmap node it crashes twice and then was okay.
This file crashes after loopcut always.
normheight1.blend
2020-06-27_17-46-24.mp4

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-26 17:24, hash: `b7b57e7155` Worked: 2.83.1 **Short description of error** Loopcut crashes Blender. Without material everything fine. With empty normalmap node it crashes twice and then was okay. This file crashes after loopcut always. [normheight1.blend](https://archive.blender.org/developer/F8647786/normheight1.blend) [2020-06-27_17-46-24.mp4](https://archive.blender.org/developer/F8647784/2020-06-27_17-46-24.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach

#78334 was marked as duplicate of this issue

#78334 was marked as duplicate of this issue

Added subscriber: @mOOngaze

Added subscriber: @mOOngaze

I can reproduce it on version: 2.90.0 Alpha, branch: master, commit date: 2020-06-25 21:53, hash: 62aa103d48
It could be related to my bug report of shift-d in edit mode while normal map is connected?

I can reproduce it on version: 2.90.0 Alpha, branch: master, commit date: 2020-06-25 21:53, hash: 62aa103d48 It could be related to [my bug report ](https://developer.blender.org/T78334) of shift-d in edit mode while normal map is connected?

Added subscriber: @VincentBlankfield

Added subscriber: @VincentBlankfield

Same as #78334 similar to #78054.
Seems to be introduced in 8f97a64dec

Test that covers all the issues:

    1. Grab the normal_map.tangent_space_bug_r1.blend file from #78054
    1. Open it, make sure the viewport is in material preview or render mode
  • 3a. Press and hold Tab to quickly switch to and from edit mode. Expect crash while holding it.
  • 3b. In object mode select one of the cubes. Go to edit mode. Add loop cut with Ctrl+R. Expect crash when the loop cut is added.
  • 3c. In edit mode select some geometry. Press Shift+D to duplicate. Expect crash when duplicate is created.

3b and 3c will also crash with the default cube in the default scene, as long as the viewport is in rendered/lookdev mode and the cube has a normal map connected to the normal input of it's BSDF (empty normal map node will do).

In case of 3b and 3c the crash occurs in BLI_mempool.c:352 void *BLI_mempool_alloc(BLI_mempool *pool):

 pool->free = free_pop->next;
 /*
 unable to read free_pop->next (free_pop->free is 0x3f0000003ec00000)
 where free_pop is dest->pool from CustomData_bmesh_copy_data_exclude_by_type(const CustomData *source,
                                                                              CustomData *dest,
                                                                              void *src_block,
                                                                              void **dest_block,
                                                                              const CustomDataMask mask_exclude)
 */

In case of 3a it crashes not so frequently in random places (after 8f97a64dec).

Same as #78334 similar to #78054. Seems to be introduced in 8f97a64dec Test that covers all the issues: - 1. Grab the [normal_map.tangent_space_bug_r1.blend file ](https://dev-files.blender.org/file/download/2niegnbaosk4seyk353s/PHID-FILE-bkmztclnvqzqehflxu24/normal_map.tangent_space_bug_r1.blend) from #78054 - 2. Open it, make sure the viewport is in material preview or render mode - 3a. Press and hold `Tab` to quickly switch to and from edit mode. Expect crash while holding it. - 3b. In object mode select one of the cubes. Go to edit mode. Add loop cut with `Ctrl+R`. Expect crash when the loop cut is added. - 3c. In edit mode select some geometry. Press `Shift+D` to duplicate. Expect crash when duplicate is created. *3b* and *3c* will also crash with the default cube in the default scene, as long as the viewport is in rendered/lookdev mode and the cube has a normal map connected to the normal input of it's BSDF (empty normal map node will do). In case of *3b* and *3c* the crash occurs in `BLI_mempool.c:352 void *BLI_mempool_alloc(BLI_mempool *pool)`: ``` pool->free = free_pop->next; /* unable to read free_pop->next (free_pop->free is 0x3f0000003ec00000) where free_pop is dest->pool from CustomData_bmesh_copy_data_exclude_by_type(const CustomData *source, CustomData *dest, void *src_block, void **dest_block, const CustomDataMask mask_exclude) */ ``` In case of 3a it crashes not so frequently in random places (after 8f97a64dec).
Member

Added subscribers: @Jeroen-Bakker, @lichtwerk

Added subscribers: @Jeroen-Bakker, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Jeroen Bakker was assigned by Philipp Oeser 2020-06-29 13:31:07 +02:00
Member

@Jeroen-Bakker: mind checking?

@Jeroen-Bakker: mind checking?
Philipp Oeser changed title from Blender crashes: loopcut on mesh with material or normalmap to Blender crashes on many modeling operations (loopcut, extrude, duplication, ...) on mesh with normal map node connected to material 2020-06-29 13:36:15 +02:00
Member
# Blender 2.90.0, Commit date: 2020-06-29 12:33, Hash 85cde12bffee
Engine 'CYCLES' not available for scene 'Scene' (an add-on may need to be installed or enabled)  # Error
bpy.context.space_data.shading.type = 'SOLID'  # Property
bpy.context.space_data.shading.type = 'MATERIAL'  # Property
bpy.ops.mesh.shortest_path_pick(use_fill=False)  # Operator
bpy.ops.mesh.shortest_path_pick(edge_mode='SELECT', use_fill=True, index=404)  # Operator

# backtrace
b290(BLI_system_backtrace+0x37) [0x3fe5767]
b290() [0xa3d57a]
/lib/x86_64-linux-gnu/libc.so.6(+0x46210) [0x7f16d8f82210]
b290(BLI_mempool_alloc+0x1f) [0x3f8b84f]
b290() [0xca5aac]
b290(CustomData_bmesh_copy_data_exclude_by_type+0x1a9) [0xca5e39]
b290() [0xddbc2f]
b290(bmesh_kernel_split_edge_make_vert+0x101) [0xddd9f1]
b290(BM_edge_split+0x14d) [0xe0168d]
b290() [0xe207fa]
b290() [0xe2141c]
b290(bmo_subdivide_edges_exec+0x75f) [0xe21c2f]
b290(BMO_op_exec+0x35) [0xdf3375]
b290(BM_mesh_esubdivide+0x9c) [0xe229bc]
b290() [0x11fc683]
b290() [0x11fd4fe]
b290() [0xd1e72b]
b290() [0xd0a444]
b290() [0xd0d500]
b290() [0xd0e72a]
b290() [0xd0ea3c]
b290(wm_event_do_handlers+0x742) [0xd0f552]
b290(WM_main+0x20) [0xd05b50]
b290(main+0x2f5) [0x9fb175]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf3) [0x7f16d8f630b3]
b290(_start+0x2e) [0xa3998e]

It seems to crash in a different part, then I expected but hey anything can happen with legacycode and threading. I will dive into it. Could be that calculating tangent normals are also storing other stuff...

``` # Blender 2.90.0, Commit date: 2020-06-29 12:33, Hash 85cde12bffee Engine 'CYCLES' not available for scene 'Scene' (an add-on may need to be installed or enabled) # Error bpy.context.space_data.shading.type = 'SOLID' # Property bpy.context.space_data.shading.type = 'MATERIAL' # Property bpy.ops.mesh.shortest_path_pick(use_fill=False) # Operator bpy.ops.mesh.shortest_path_pick(edge_mode='SELECT', use_fill=True, index=404) # Operator # backtrace b290(BLI_system_backtrace+0x37) [0x3fe5767] b290() [0xa3d57a] /lib/x86_64-linux-gnu/libc.so.6(+0x46210) [0x7f16d8f82210] b290(BLI_mempool_alloc+0x1f) [0x3f8b84f] b290() [0xca5aac] b290(CustomData_bmesh_copy_data_exclude_by_type+0x1a9) [0xca5e39] b290() [0xddbc2f] b290(bmesh_kernel_split_edge_make_vert+0x101) [0xddd9f1] b290(BM_edge_split+0x14d) [0xe0168d] b290() [0xe207fa] b290() [0xe2141c] b290(bmo_subdivide_edges_exec+0x75f) [0xe21c2f] b290(BMO_op_exec+0x35) [0xdf3375] b290(BM_mesh_esubdivide+0x9c) [0xe229bc] b290() [0x11fc683] b290() [0x11fd4fe] b290() [0xd1e72b] b290() [0xd0a444] b290() [0xd0d500] b290() [0xd0e72a] b290() [0xd0ea3c] b290(wm_event_do_handlers+0x742) [0xd0f552] b290(WM_main+0x20) [0xd05b50] b290(main+0x2f5) [0x9fb175] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf3) [0x7f16d8f630b3] b290(_start+0x2e) [0xa3998e] ``` It seems to crash in a different part, then I expected but hey anything can happen with legacycode and threading. I will dive into it. Could be that calculating tangent normals are also storing other stuff...

This issue was referenced by 13e2337da7

This issue was referenced by 13e2337da7b9c235aadfaf28595c14de3b1b8479
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78361
No description provided.