Fix T78361: Crash When Modelling

Forgot to free the tangent layer for bmesh in the drawing code.